HVAC Backup 2/objects/BAD_TAT_Criteria__mdt(1).object
<CustomObject>
    <fields>
        <fullName>BAD_Rating_Criteria__c</fullName>
        <label>BAD Rating Criteria</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAD_TAT_Criteria__c</fullName>
        <label>BAD TAT Criteria</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Criteria__c</fullName>
        <label>Month Criteria</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BAD TAT Criteria</label>
    <pluralLabel>BAD TAT Criteria</pluralLabel>
</CustomObject>